runit 1.4.0
Sat, 04 Mar 2006 14:26:26 +0000
  * doc/faq.html: new.
  * doc/benefits.html: use sv program instead of runsvstat, runsvctrl;
    minor.
  * doc/replaceinit.html, doc/runlevels.html: put getty service directory
    into /etc/sv/.
  * doc/runscripts.html: use sv program instead of svwaitup.
  * etc/*/3, etc/macosx/StartupItems/runit: use sv program instead of
    svwaitdown.
  * man/runsv.8: use sv program instead of runsvctrl.
  * man/sv.8: minor.
  * Makefile, package/commands: no longer build/install runsvctrl,
    runsvstat, svwaitdown, svwaitup.
  * man/runsvctrl.8, man/runsvstat.8, man/svwaitdown.8, man/svwaitup.8:
    remove; obsolete.
  * doc/index.html: add faq; remove runsvctrl, runsvstat, svwaitdown,
    svwaitup.
  * sv.c: fix usage output.

runit 1.3.3
Mon, 02 Jan 2006 20:35:34 +0000
  * chpst.c: adjust nice value and set limits before dropping permissions.
  * sv.c: new additional command 'check'; with -v check for CONT through
    ./check if service is up.
  * man/sv.8: adapt.

runit 1.3.2
Sun, 18 Dec 2005 11:22:04 +0000
  * svlogd.c: don't print extra newlines to the log if additionally writing
    to the network through udp (thx Andras Korn,
    http://bugs.debian.org/339030).
  * runsvdir.c: also process svdir changes if mtime of svdir has changed into
    the past (thx Martin Dickopp).
  * doc/index.html: update description; Please contact this list and not me
    privately.
  * doc/replaceinit.html, doc/runscripts.html: minor.
  * man/chpst.8: -U doesn't support a list of groups.
  * man/svlogd.8: update PATTERN MATCHING section, add example (based on
    sugesstions from Joshua N Pritikin).
  * man/*8: update SEE ALSO sections: runsvctrl, runsvstat, svwaitdown,
    svwaitup will become obsolete; remove references to man pages for
    programs from the daemontools package.

runit 1.3.1
Wed, 24 Aug 2005 20:14:17 +0000
  * doc/runscripts.html: typo; openssh needs absolute path (thx Kevin Berry);
    exec into dhcpcd.